owncloud-service.yml
apiVersion: v1
kind: Service
metadata:
  name: owncloud
spec:
  ports:
  - name: http
    targetPort: 80
    port: 80
  selector:
    app: owncloud
