owncloud-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: owncloud
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: owncloud.familie-reize.de
    http:
      paths:
      - path: /
        backend:
          serviceName: owncloud
          servicePort: http
